--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
     <script src="js/services/services.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="minifarma">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
