--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,12 @@
   </head>
 
   <body ng-app="minifarma">
+    <!--
+      The nav bar that will be updated as we navigate between views.
+    -->
+    <ion-nav-bar class="bar-assertive">
+      <ion-nav-back-button></ion-nav-back-button>
+    </ion-nav-bar>
 
     <!--<map center="{{51.544440}}, {{-0.022974}}"-->
          <!--zoom="13"-->
