--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/controllers.js"></script>
     <script src="js/controllers/medicament.js"></script>
+    <script src="js/controllers/alert.js"></script>
     <script src="js/controllers/tab.js"></script>
     <script src="js/services/services.js"></script>
   </head>
