--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
     <title></title>
 
 
@@ -14,7 +15,7 @@
     <script src="lib/angular-messages/angular-messages.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="https://maps.google.com/maps/api/js"></script>
+    <!--<script src="https://maps.google.com/maps/api/js"></script>-->
     <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
