--- a/www/index.html
+++ b/www/index.html
@@ -13,10 +13,6 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-messages/angular-messages.min.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="https://maps.google.com/maps/api/js"></script>
-    <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
-
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
@@ -25,37 +21,21 @@
     <script src="js/controllers/controllers.js"></script>
     <script src="js/controllers/medicament.js"></script>
     <script src="js/controllers/alert.js"></script>
+    <script src="js/controllers/pharmacy.js"></script>
     <script src="js/controllers/tab.js"></script>
     <script src="js/services/services.js"></script>
+
+    <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
   </head>
 
   <body ng-app="minifarma">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
+
     <ion-nav-bar class="bar-assertive">
       <ion-nav-back-button></ion-nav-back-button>
     </ion-nav-bar>
 
-    <!--<map center="{{51.544440}}, {{-0.022974}}"-->
-         <!--zoom="13"-->
-         <!--disable-default-u-i="true">-->
-      <!--&lt;!&ndash;icon="img/asdasd"&ndash;&gt;-->
-      <!--<marker clickable="true"-->
-              <!--position="{{[51.544440, -0.022974]}}"></marker>-->
-
-    <!--</map>-->
-
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
     <ion-nav-view></ion-nav-view>
-
-    <!--<button class="button button-positive posicao-botao">-->
-      <!--lakjlkjdlksajdklajkldjaksldjkl-->
-    <!--</button>-->
 
   </body>
 </html>
