--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,9 @@
 
     <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
     <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
+
+    <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
+    
   </head>
 
   <body ng-app="minifarma">
