--- a/www/index.html
+++ b/www/index.html
@@ -25,12 +25,13 @@
     <script src="js/controllers/pharmacy.js"></script>
     <script src="js/controllers/tab.js"></script>
     <script src="js/services/services.js"></script>
+    <script src="js/database.js"></script>
 
     <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
     <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
 
     <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
-    
+
   </head>
 
   <body ng-app="minifarma">
