--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
 
     <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
+    <script src="lib/ionic-timepicker/dist/ionic-timepicker.bundle.min.js"></script>
 
   </head>
 
