--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+    <!--<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">-->
     <title></title>
 
 
@@ -27,7 +27,7 @@
     <script src="js/services/services.js"></script>
     <script src="js/database.js"></script>
 
-    <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="https://maps.google.com/maps/api/js"></script>
     <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
 
     <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
