--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     <script src="js/controllers/pharmacy.js"></script>
     <script src="js/controllers/tab.js"></script>
     <script src="js/services/services.js"></script>
+    <script src="js/services/medicamentService.js"></script>
     <script src="js/database.js"></script>
 
     <script src="https://maps.google.com/maps/api/js"></script>
