separating other services

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,8 @@
     <script src="js/controllers/tab.js"></script>
     <script src="js/services/services.js"></script>
     <script src="js/services/medicamentService.js"></script>
+    <script src="js/services/pharmacyService.js"></script>
+    <script src="js/services/alertService.js"></script>
     <script src="js/database.js"></script>
 
     <script src="https://maps.google.com/maps/api/js"></script>
